--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
     <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
   <% end %>
 
+  <%- flash.each do |name, msg| -%>
+    <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+  <%- end -%>   
+  
 <%= yield %>
 
 </body>
