--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if user_signed_in? %>
-    Signed in as: <strong><%= current_user.email %></strong> |
-    <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-  <% else %>
-    <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-    <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
-  <% end %>
-
-  <%- flash.each do |name, msg| -%>
-    <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
-  <%- end -%>   
+  <div clas="container">
+    <div class="nav nav-tabs">
+      <% if user_signed_in? %>
+        Signed in as: <strong><%= current_user.email %></strong> |
+        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+      <% else %>
+        <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+        <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+      <% end %>
+    </div>
   
-<%= yield %>
+    <% if flash[:notice] %>
+        <div class="alert alert-success">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:notice] %>
+        </div>
+      <% elsif flash[:alert] %>
+        <div class="alert alert-warning">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:alert] %>
+        </div>
+    <% end %>  
+    
+    <%= yield %>
+  </div>
 
 </body>
 </html>
