--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>Tasks</h1>
+
+<div class="container">
+    <div class="row">
+        <%= current_user.email =%>        
+    </div>
+</div>
