--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group" style="padding:10px">
-    <% @items.each do |item| %>
+    <% @user.items.each do |item| %>
         <ul>
             <li>
                 <%= item.name %>
