--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="form-group">
-    <%= form_for [@user, @item] do |t| %>
+    <%= form_for [@user, Item.new] do |t| %>
         <%= t.text_field :name, placeholder: "Add new item" %>
         <%= t.submit "Add", class: "btn btn-success" %>
     <% end %>        
